# CustomAgents

./: .gitignore  README.md  chatbot_app.py  demo.txt  main.py  pyproject.toml  webapp.py
src/: agent.py  llm.py  tools_manager.py
src/tools/: os_tools.py
webapp/: __init__.py  chat_page.py  sidebar.py
